public/dark-theme.css
.ant-input,
.ant-input-number-input-wrap {
  color: white !important;
  background-color: #2c2f33 !important;
}

.ant-radio-button-wrapper {
  background-color: #2c2f33 !important;
  color: white !important;
}

.ant-form-item-label,
input,
.ant-form-item-label label,
.ant-checkbox-wrapper,
.ant-layout-footer {
  color: white !important;
}

body {
  background-color: #23272a !important;
}

form+div label {
  margin-top: 10px;
  color: white !important;
  border-width: 1px !important;
}

form+div span {
  border-width: 1px !important;
}

form+div {
  margin-top: 10px;
}

.ant-radio-button-wrapper-checked {
  border-color: white !important;
  border-width: 2px !important;
}

.ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):before {
  background-color: white !important;
}

.ant-radio-button-wrapper {
  display: inline-table !important;
}

.ant-radio-button-wrapper-checked:focus-within {
  box-shadow: none !important;
}

.ant-radio-button-wrapper:focus-within {
  box-shadow: none !important;
}

.ant-checkbox-checked .ant-checkbox-inner {
  background-color: #23272a !important;
}


.ant-checkbox-input:focus+.ant-checkbox-inner,
.ant-checkbox-wrapper:hover .ant-checkbox-inner,
.ant-checkbox-checked:after,
.ant-input:hover,
.ant-input:focus,
.ant-input-focused,
.ant-input-number:hover {
  border-color: white !important;
}

.ant-timeline,
h1 {
  color: white !important;
}

code {
  background-color: #2c2f33 !important;
}

.ant-timeline-item-head-blue {
  border-color: white !important;
}

